# fileshare-app

./: .sample_config.toml  Cargo.toml  Makefile
migrations/: 1__initial.sql
src/: main.rs
src/config/: reader.rs
src/handlers/: hello.rs
src/models/: files.rs
